# PerfectRust

chapter01/: Cargo.toml
chapter01/src/: main.rs
chapter02/: Cargo.toml
chapter02/src/: arithmetic.rs  assign.rs  bit.rs  comparison.rs  logical.rs  main.rs
chapter03/: Cargo.toml
chapter03/src/: constant.rs  main.rs  scope.rs  static_val.rs  variable.rs
chapter04/: Cargo.toml
chapter04/src/: array_type.rs  boolean_type.rs  character_type.rs  floating_type.rs  integer_type.rs  main.rs  pointer_type.rs  slice_type.rs  str_type.rs  tuple_type.rs
chapter05/: Cargo.toml
chapter05/src/: branch_if.rs  branch_match.rs  main.rs  repet_for.rs  repet_loop.rs  repet_while.rs
chapter06/: Cargo.toml
chapter06/src/: box_type.rs  date_time_type.rs  hash_map_type.rs  hash_set_type.rs  linked_list_type.rs  main.rs  string_type.rs  vec_type.rs
chapter07/: Cargo.toml
chapter07/src/: basic_function.rs  closure.rs  function_type.rs  generics.rs  life_time.rs  main.rs  option_type.rs  ownership.rs  reference.rs  result_type.rs
chapter08/: Cargo.toml
chapter08/src/: border.rs  constant.rs  customer.rs  generics.rs  main.rs  member.rs  name_field_type.rs  tuple_unit_type.rs
chapter09/: Cargo.toml
chapter09/src/: basic.rs  generics.rs  main.rs  struct_type.rs  tuple_type.rs
chapter10/: Cargo.toml
chapter10/resources/: products.csv  products.json
chapter10/src/: basic.rs  lib.rs  main.rs
chapter10/src/association/: entities.rs  mod.rs  traits.rs  traits_impl.rs  try_out.rs
chapter10/src/generics/: entities.rs  mod.rs  services.rs  sub.rs  traits.rs  traits_impl.rs  try_out.rs
chapter11/: Cargo.toml
chapter11/src/: anyhow.rs  basic.rs  calc.rs  lib.rs  main.rs  original_error.rs  panic.rs  this_error.rs
chapter11/src/original/: mod.rs  panic.rs  sample_error.rs
chapter12/: Cargo.toml
chapter12/resources/: stations.json
chapter12/src/: asynchronous.rs  basic.rs  clinet.rs  cross_beam.rs  customer.rs  exclusive_mutex.rs  exclusive_rwlock.rs  exclusive_shradelock.rs  lib.rs  main.rs  messaging_crossbeam.rs  messaging_std.rs  station.rs  stations.rs  task_controller.rs  writer.rs
chapter13/: Cargo.toml
chapter13/src/: document_test.rs  lib.rs  main.rs  target.rs
chapter13/src/simple_test_case/: guest.rs
chapter13/tests/: lib.rs
chapter13/tests/simple_test_case/: mod.rs  target.rs
chapter14/: Cargo.toml
chapter14/SQL/: create_database.sql  create_recored.sql
chapter14/resources/: sql.yml
chapter14/src/: lib.rs  main.rs
chapter14/src/section_1/: connect.rs  entities.rs  mod.rs  params.rs  product_category_repository.rs  product_repository.rs  repository.rs  transaction.rs
chapter14/src/section_2/: manager.rs  mod.rs  pool_1.rs  pool_2.rs
chapter14/src/section_3/: connect.rs  mod.rs  product_repository.rs  repository.rs  transaction.rs
chapter14/src/section_4/: sql.rs
chapter15/: Cargo.toml
chapter15/src/: connect.rs  entities.rs  lib.rs  product_repository.rs  repository.rs
chapter16/: .env  Cargo.toml
chapter16/src/: lib.rs  pool.rs  product_category_repository.rs  product_repository.rs  repository.rs
chapter16/src/entities/: mod.rs  product.rs  product_category.rs
chapter17/: Cargo.toml
chapter17/src/: lib.rs  main.rs  pool.rs
chapter17/src/handlers/: handl_func.rs  mod.rs  tera_handler.rs
chapter17/views/pages/: enter.html  layout.html  result.html
chapter18_api/: .env  Cargo.toml  localhost.pem
chapter18_api/src/: lib.rs  main.rs
chapter18_api/src/handler/: api_jwt.rs  authenticate.rs  error.rs  mod.rs  register.rs  search.rs
chapter18_lib/: Cargo.toml
chapter18_lib/SQL/: create_object.sql
chapter18_lib/src/: error.rs  lib.rs
chapter18_lib/src/application/: mod.rs  provider.rs
chapter18_lib/src/application/category/: category_service.rs  category_service_impl.rs  mod.rs
chapter18_lib/src/application/product/: mod.rs  product_service.rs  product_service_impl.rs
chapter18_lib/src/application/user/: mod.rs  user_service.rs  user_service_impl.rs
chapter18_lib/src/domain/: converter.rs  entity.rs  mod.rs  value_object.rs
chapter18_lib/src/domain/category/: category.rs  category_id.rs  category_name.rs  mod.rs  repository.rs
chapter18_lib/src/domain/product/: mod.rs  product.rs  product_id.rs  product_name.rs  product_price.rs  repository.rs
chapter18_lib/src/domain/user/: mail.rs  mod.rs  password.rs  repository.rs  user.rs  user_id.rs  user_name.rs
chapter18_lib/src/infrastructure/: mod.rs  pool.rs
chapter18_lib/src/infrastructure/sea_orm/: category_converter.rs  category_repository.rs  mod.rs  pool.rs  product_converter.rs  product_repository.rs  user_converter.rs  user_repository.rs
chapter18_lib/src/infrastructure/sea_orm/model/: mod.rs  prelude.rs  product.rs  product_category.rs  user.rs
chapter18_lib/src/view_commons/: dtos.rs  forms.rs  jwt.rs  mod.rs  validator.rs
chapter18_lib/tests/: commons.rs  lib.rs
chapter18_lib/tests/application/: category_service.rs  mod.rs  product_service.rs
chapter18_web/: Cargo.toml  localhost-key.pem
chapter18_web/src/: lib.rs  main.rs
chapter18_web/src/handler/: authenticate.rs  error.rs  menu_error.rs  mod.rs  register.rs  search.rs  view_helper.rs  web_jwt.rs
chapter18_web/views/pages/error/: error.html
chapter18_web/views/pages/layout/: layout.html
chapter18_web/views/pages/login/: login.html
chapter18_web/views/pages/menu/: menu.html
chapter18_web/views/pages/register/: enter.html  finish.html
chapter18_web/views/pages/search/: search.html
