[package]
name = "chapter12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam  =  "0.8.1" # グリーンスレッド
serde      = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.79"
anyhow     = "1.0.68"
async-std = { version="1.12.0" , features=["attributes","unstable"] }
csv = "1.1.6"