[package]
name = "chapter15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.3.1"
tokio = {version="1.24.1" , features=["full"]}
serde = {version = "1.0.152", features = ["derive"] }
proc-macro2 = "1.0.49"
futures-util = "0.3.25"
anyhow = "1.0.68"
lombok = "0.3.3"
async-trait = "0.1.61"
