[package]
name = "chapter16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = {version="0.10.6" , features=["sqlx-postgres" , "runtime-tokio-rustls" , "macros"] , default-features = false}
tokio = {version="1.17.0" , features=["full"]}
serde = {version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", default-features = false, features = ["alloc"] }
proc-macro2 = "1.0.37"
lombok = "0.3.3"
async-trait = "0.1.53"
anyhow = "1.0.56"
dotenv = "0.15.0"
chrono = "0.4.19"
log = "0.4.16"
env_logger = "0.10.0"
