[package]
name = "chapter17"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.2.1", features = ["openssl"] }
openssl = { version = "0.10.45", features = ["v110"] }
actix-http =   "3.2.2"
tera        =   "1.17.1"
mime        =   "0.3.16"
env_logger =   "0.10.0"
log         =   "0.4.17"
anyhow      =   "1.0.65"
dotenv      =   "0.15.0"
serde       =   {version = "1.0.144", features = ["derive"]}
sea-orm = {version="0.10.6" , features=["sqlx-postgres" , "runtime-tokio-rustls" , "macros"] , default-features = false}
serde_json = { version = "1.0.79", default-features = false, features = ["alloc"] }
tokio = {version="1.17.0" , features=["full"]}