[package]
name = "chapter18_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = {version="0.10.7" , features=["sqlx-postgres" , "runtime-tokio-rustls" , "macros"] , default-features = false}
tokio = {version="1.17.0" , features=["full"]}
serde = {version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", default-features = false, features = ["alloc"] }
proc-macro2 = "1.0.37"
async-trait = "0.1.53"
anyhow = "1.0.56"
thiserror = "1.0.38"
dotenv = "0.15.0"
chrono = "0.4.19"
log = "0.4.16"
env_logger = "0.10.0"
#uuid = { version = "1.1.2" ,features = [
#    "v4",                # バージョン4を利用する
#    "fast-rng",          # 高速なRNGを利用する
#    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
#] }
# UUIDの生成
uuid = { version = "1.1.2" ,features = ["v4" , "fast-rng" , "macro-diagnostics"] }
easy-hasher =   "2.2.1"
validator   =   { version = "0.16.0", features = ["derive"] }
rusty-money =   { version = "0.4.1", features = ["iso", "crypto"] }
jsonwebtoken = "8.2.0"